; ModuleID = '/home/carl/AnghaBench/linux/fs/proc/extr_generic.c_proc_set_user.c'
source_filename = "/home/carl/AnghaBench/linux/fs/proc/extr_generic.c_proc_set_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc_dir_entry = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @proc_set_user(%struct.proc_dir_entry* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.proc_dir_entry*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.proc_dir_entry* %0, %struct.proc_dir_entry** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %4, align 8
  %9 = getelementptr inbounds %struct.proc_dir_entry, %struct.proc_dir_entry* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %4, align 8
  %12 = getelementptr inbounds %struct.proc_dir_entry, %struct.proc_dir_entry* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
